--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fitzbuzz_client",
   "version": "0.1.0",
   "description": "Commandline utility for accessing the fitzbuzz API",
-  "main": "main.js",
+  "main": "fitzbuzz.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,6 @@
     "node-rest-client": "^1.8.0"
   },
   "bin": {
-    "fb_client": "./main.js"
+    "fitzbuzz": "./fitzbuzz.js"
   }
 }
